@@ -16,11 +16,14 @@ sb-startup1=Crush stiratite
 sb-startup2=Farm brown algae
 sb-startup3=Basic circuit board
 sb-startup4=Laboratory
+alloy-processing=Bronze processing
+zinc-processing=Brass processing
 
 [technology-description]
 sb-startup1=Crushed saphirite can be smelted to iron plates. Crushed stiratite can be smelted to copper plates.
 sb-startup2=Grow brown algae in an algae farm. Brown algae can be crafted into alginic acid which is needed to make wooden boards.
 sb-startup3=Craft a basic circuit board. Basic circuit boards are required to craft most machines.
+alloy-processing=
 
 [item-description]
 sb-angelsore3-tool=Collect crushed stiratite ore from a burner ore crusher to complete this research
